# superwhisper-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SETUP.md  pyproject.toml
src/superwhisper/: __init__.py  audio.py  clipboard.py  config.py  deps.py  hotkey.py  install.py  logging_config.py  main.py  notifications.py  transcribe.py  tray.py
